--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "properaliengamedeploymentfile",
   "version": "1.0.0",
   "engines": {
-    "node": "14.x"
+    "node": "14.17.3"
   },
   "description": "",
   "main": "server2.js",
