--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "properaliengamedeploymentfile",
+  "name": "aliengamedeploymentfile",
   "version": "1.0.0",
-  "engines": {
-    "node": "14.17.3"
-  },
   "description": "",
   "main": "server2.js",
   "dependencies": {
     "express": "^4.17.1",
     "html2canvas": "^1.3.2",
     "mysql": "^2.18.1",
-    "socket.io": "^4.1.3"
+    "socket.io": "^4.1.3",
+    "sql.js": "^1.6.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
