--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aliengamedeploymentfile",
+  "name": "ProperAlienGameDeploymentFile",
   "version": "1.0.0",
   "description": "",
   "main": "server2.js",
